Fix typo "meterial" to "material" in 0.6.html
Fix typo "meterial" to "material" in 0.6.html in ics2021.

--- a/ics2021/0.6.html
+++ b/ics2021/0.6.html
@@ -680,7 +680,7 @@ git config --global core.editor vim                 # your favorite editor
 git config --global color.ui true
 </code></pre><p>You should configure <code>git</code> with your student ID, name, and email.
 Before continuing, please read <a href="git.html">this</a> <code>git</code> tutorial to learn some basics of <code>git</code>.
-Another meterial recommended by jyy is <a href="http://onlywei.github.io/explain-git-with-d3" target="_blank">Visualizing Git Concepts with D3</a>.
+Another material recommended by jyy is <a href="http://onlywei.github.io/explain-git-with-d3" target="_blank">Visualizing Git Concepts with D3</a>.
 You can learn some <code>git</code> commands with the help of visualization.</p>
 <p>Enter the project directory <code>ics2021</code>, then run</p>
 <pre><code>git branch -m master
