--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <h1>南京大学 计算机科学与技术系 计算机系统基础 课程实验 (PA)</h1>
 
+    <li> <a href="ics2022">2022 秋季</a></li>
     <li> <a href="ics2021">2021 秋季</a></li>
     <li> <a href="ics2020">2020 秋季</a></li>
     <li> <a href="ics2019">2019 秋季</a></li>
