Update 0.2.html: fix grammatical error

--- a/ics2024/0.2.html
+++ b/ics2024/0.2.html
@@ -759,7 +759,7 @@
 <p>This prompt shows your username, host name, and the current working directory.
 The username should be the same as you set during the installation.
 The current working directory is <code>~</code> now.
-As you switching to another directory, the prompt will change as well.
+As you switch to another directory, the prompt will change as well.
 You are going to code under this environment, so try to make friends with terminal!</p>
 <div class="panel panel-info"><div class="panel-heading"><h5 class="panel-title" id="where-is-gui"><i class="fa fa-question-circle"></i> Where is GUI?</h5></div><div class="panel-body"><p>Many of you always use operating system with GUI, such as Windows.
 But the terminal is completely with CLI (Command Line Interface).
